--- a/SecretHitlerServerFrontend/Pages/Play.razor
+++ b/SecretHitlerServerFrontend/Pages/Play.razor
@@ -4,7 +4,7 @@
 @inject Games Games
 @inject NavigationManager NavigationManager
 
-<link href="css/PlayTitle.css" rel="stylesheet"/>
+<link href="css/Title.css" rel="stylesheet"/>
 <link href="css/Play.css" rel="stylesheet"/>
 
 <PageTitle>Play Secret Hitler Online</PageTitle>
