Refactor game home page and enhance user experience
Removed default Index.razor and added home screen with CSS animations and dynamic behavior to improve user experience. Added dynamic head outlet component for more flexible layouts. Migrated Round.cs within Game folder for cleaner structure. Adjusted various game actions (e.g. president trigger in GameController.cs) and audio effects for more immersive gameplay. Minor tweaks to other files for consistency and optimization.

--- a/SecretHitler/_Imports.razor
+++ b/SecretHitler/_Imports.razor
@@ -2,3 +2,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using SecretHitler
+@using SecretHitler.Components
+@using SecretHitler.QOL.Components
