--- a/SecretHitler/Pages/_Host.cshtml
+++ b/SecretHitler/Pages/_Host.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @using Microsoft.AspNetCore.Components.Web
+@using SecretHitler.QOL.Components
 @namespace SecretHitler.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
@@ -9,7 +10,9 @@
     <meta charset="utf-8"/>
     <base href="~/"/>
     <link href="css/site.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/Theme/Theme.css">
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
+    <component type="typeof(DynamicHeadOutlet)" render-mode="ServerPrerendered"/>
 </head>
 <body>
 <component type="typeof(App)" render-mode="ServerPrerendered"/>
@@ -25,6 +28,7 @@
     <a class="dismiss">🗙</a>
 </div>
 
+<script src="js/audio.js"></script>
 <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
