--- a/SecretHitler/wwwroot/css/Theme/Typography.css
+++ b/SecretHitler/wwwroot/css/Theme/Typography.css
@@ -90,26 +90,34 @@
 /* sizes */
 
 .title-large {
-    font-size: 56pt;
+    font-size: 90pt;
 }
 
 .title-medium {
-    font-size: 48pt;
+    font-size: 77pt;
 }
 
 .title-small {
-    font-size: 40pt;
+    font-size: 64pt;
+}
+
+.header-xlarge {
+    font-size: 54pt;
 }
 
 .header-large {
-    font-size: 42pt;
+    font-size: 48pt;
 }
 
 .header-medium {
-    font-size: 36pt;
+    font-size: 42pt;
 }
 
 .header-small {
+    font-size: 36pt;
+}
+
+.header-xsmall {
     font-size: 30pt;
 }
 
@@ -123,18 +131,4 @@
 
 .display-small {
     font-size: 12pt;
-}
-
-/* font-specific sizes */
-
-.eskapade-fraktur.title-large {
-    font-size: 112pt !important;
-}
-
-.eskapade-fraktur.title-medium {
-    font-size: 96pt !important;
-}
-
-.eskapade-fraktur.title-small {
-    font-size: 80pt !important;
 }
