--- a/SecretHitler/wwwroot/css/site.css
+++ b/SecretHitler/wwwroot/css/site.css
@@ -1,3 +1,15 @@
+*,
+*::before,
+*::after {
+    margin: 0;
+    box-sizing: content-box;
+}
+
+main {
+    width: 100vw;
+    height: 100vh;
+}
+
 #blazor-error-ui {
     background: lightyellow;
     bottom: 0;
